final commit for dark mode; css/html bugs fixed

--- a/src/pages/aboutPage/AboutPage.css
+++ b/src/pages/aboutPage/AboutPage.css
@@ -1,11 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Italiana&family=Montserrat:wght@100&display=swap'); 
 
 
-
 .aboutpage-content-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.dark-mode-about-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #231F20;
+  color:#FAF4F0;
 }
 
 .about-row {
@@ -70,6 +77,8 @@ p {
   border: 1px solid white;
   margin-bottom: 40px;
   width: 80%;
+  background-color: #231F20;
+  color:#FAF4F0;
 }
 
 .about-contact-link, .about-prj-link {
